--- a/HW4/HW4/UI/Orders/AddPromo.xaml
+++ b/HW4/HW4/UI/Orders/AddPromo.xaml
@@ -5,9 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HW4"
         mc:Ignorable="d"
-        Title="AddPromo" Height="176" Width="262">
+        Title="AddPromo" Height="300" Width="300">
     <Grid>
-        <StackPanel Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Name="OrderInfoBasic">
+            <TextBlock HorizontalAlignment="Center" FontSize="20">
+                <Run Text="Order ID" />: <Run Text="{Binding OrderID}"/>
+            </TextBlock>
+            <TextBlock HorizontalAlignment="Center" FontSize="20">
+                <Run Text="Customer" />: <Run Text="{Binding CustomerName}"/>
+            </TextBlock>
+            <TextBlock HorizontalAlignment="Center" FontSize="20">
+                <Run Text="Date" />: <Run Text="{Binding OrderDate}"/>
+            </TextBlock>
+        </StackPanel>
+        <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Label FontSize="20" Content="{Binding OrderID}" Name="Order"></Label>
             <Label Content="Select Promo" FontSize="20" FontFamily="Arial" HorizontalAlignment="Center"/>
             <ComboBox Name="Promo" Height="25" Width="162" DisplayMemberPath="PromoName" ItemsSource="{Binding PROMOTIONSINORDER}" SelectedValue="{Binding SelectedCustomer}"/>
