--- a/HW4/HW4/UI/Customers/CustomerManagementUserControl.xaml
+++ b/HW4/HW4/UI/Customers/CustomerManagementUserControl.xaml
@@ -12,19 +12,34 @@
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="CustomerDataGrid" Grid.Column="1" Background="LightGray" RowBackground="LightYellow" AlternatingRowBackground="LightBlue" >
+        <DataGrid x:Name="CustomerDataGrid" Grid.Column="1" Background="LightGray" RowBackground="LightYellow" AlternatingRowBackground="LightBlue" AutoGenerateColumns="False">
             <DataGrid.RowDetailsTemplate>
                 <DataTemplate>
                     <Image Source="{Binding Pfp, Converter={StaticResource absoluteConverter}}" Width="60" Height="80" RenderOptions.BitmapScalingMode="HighQuality"/>
                 </DataTemplate>
             </DataGrid.RowDetailsTemplate>
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="First Name" Binding="{Binding FirstName}"/>
+                <DataGridTextColumn Header="Last Name" Binding="{Binding LastName}"/>
+                <DataGridTextColumn Header="Gender" Binding="{Binding Gender}"/>
+                <DataGridTextColumn Header="Address" Binding="{Binding Address}"/>
+                <DataGridTextColumn Header="Phone Number" Binding="{Binding PhoneNum}"/>
+                <DataGridTextColumn Header="Date of Birth" Binding="{Binding DOB}"/>
+            </DataGrid.Columns>
         </DataGrid>
+
+        <StackPanel Grid.Row="0" VerticalAlignment="Top">
+            <Label Content="Search Box"/>
+            <TextBox x:Name="SearchTextBox"/>
+            <Button x:Name="SeachButton" Content="Search" Width="50" Margin="0,5,0,0" Click="SeachButton_Click"/>
+        </StackPanel>
 
         <StatusBar Grid.Row="1" Grid.ColumnSpan="2"/>
         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
