--- a/HW4/HW4/UI/DashBoard/DashboardScreen.xaml
+++ b/HW4/HW4/UI/DashBoard/DashboardScreen.xaml
@@ -2,14 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
-             
+        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         xmlns:uc="clr-namespace:HW4"
         xmlns:converter="clr-namespace:HW4.UI.Converters"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HW4"
         mc:Ignorable="d" d:DesignHeight="720" d:DesignWidth="1280" 
-        Loaded="Dashboard_Loaded" Unloaded="Dashboard_Unloaded" Background="Transparent">
+        Loaded="Dashboard_Loaded" Background="Transparent">
 
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="boolToVisConv"/>
@@ -17,8 +16,7 @@
         <converter:PlainDollarToVNDConverter x:Key="USDtoVNDConverter"/>
     </UserControl.Resources>
 
-    <Border CornerRadius="25" Padding="20" Background="#f7f6f4" 
-            MouseDown="Border_MouseDown" MouseLeftButtonDown="Border_MouseLeftButtonDown">
+    <Border CornerRadius="25" Padding="20" Background="#f7f6f4">
         <Grid Margin="-2,0,2,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
@@ -132,9 +130,71 @@
 
             <!--Main Chart Section-->
             <Border Grid.Column="1" Grid.Row="2" Style="{StaticResource whiteBorder}" Margin="20,5,20,0">
-                <Grid Margin="15 5">
+                <Grid Margin="1 5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2.5*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="2*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1.5*"/>
+                        <RowDefinition Height="5*"/>
+                    </Grid.RowDefinitions>
                     <!--Chart-->
-                    <uc:ReportChart x:Name="Chart" HorizontalAlignment="Center" Width="745" Margin="0,0,0,21"/>
+                    
+                    <DockPanel LastChildFill="False" Grid.ColumnSpan="5" 
+                               Grid.Row="1" Margin="0,23,0,3" Width="790">
+                        <ScrollViewer VerticalScrollBarVisibility="Visible" 
+                                      HorizontalScrollBarVisibility="Visible" Width="739">
+                            <StackPanel>
+                                <lvc:CartesianChart Name="Incomechart" LegendLocation="Bottom"
+                                                    Series="{Binding SeriesCollection}"
+                                                    Loaded="chart_LoadedDoanhThuLoiNhuan" Width="756" Height="384">
+                                    <lvc:CartesianChart.AxisX>
+                                        <lvc:Axis Title="Biểu đồ báo cáo doanh thu và lợi nhuận của cửa hàng"/>
+                                        <lvc:Axis Labels="{Binding Labels}"/>
+                                    </lvc:CartesianChart.AxisX>
+                                </lvc:CartesianChart>
+
+                                <lvc:CartesianChart Name="QuantitySoldchart" LegendLocation="Bottom"
+                                                    Series="{Binding SeriesCollection}"
+                                                    Loaded="chart_LoadedSanPhamSoLuong" Width="756" Height="384">
+                                    <lvc:CartesianChart.AxisX>
+                                        <lvc:Axis Title="Biểu đồ báo cáo doanh thu và lợi nhuận của cửa hàng"/>
+                                        <lvc:Axis Labels="{Binding Labels}"/>
+                                    </lvc:CartesianChart.AxisX>
+                                </lvc:CartesianChart>
+                            </StackPanel>
+                        </ScrollViewer>
+                    </DockPanel>
+                    <StackPanel Grid.Column="0" Grid.Row="0" VerticalAlignment="Top"  HorizontalAlignment="Center">
+                        <TextBlock Text="Choose Date " Margin="0,0,0,5" Width="220" TextAlignment="Center"/>
+                        <StackPanel Orientation="Horizontal">
+                            <DatePicker Name="startDatePicker" />
+                            <TextBlock Text="-" Margin="5,0"/>
+                            <DatePicker Name="endDatePicker"/>
+                        </StackPanel>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
+                        <Button Click="ChartWithDateButton_Click" Content="Ngày" FontSize="13"
+                                HorizontalAlignment="Center" VerticalAlignment="Center" Height="26" Width="56"/>
+                    </StackPanel>
+
+                    <StackPanel Grid.Column="2" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
+                        <Button Click="ChartWithMonthButton_Click" Content="Tháng" FontSize="13"
+                                HorizontalAlignment="Center" VerticalAlignment="Center" Height="26" Width="56"/>
+                    </StackPanel>
+
+                    <StackPanel Grid.Column="3" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
+                        <Button Click="ChartWithYearButton_Click" Content="Năm" FontSize="13"
+                                HorizontalAlignment="Center" VerticalAlignment="Center" Height="26" Width="56"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="4" Grid.Row="0" HorizontalAlignment="Center">
+                        <TextBlock Text="Sales Figures" Style="{StaticResource titleText1}"/>
+                    </StackPanel>
                 </Grid>
             </Border>
 
