--- a/HW4/HW4/UI/DashBoard/DashboardScreen.xaml
+++ b/HW4/HW4/UI/DashBoard/DashboardScreen.xaml
@@ -31,7 +31,7 @@
             </Grid.RowDefinitions>
 
             <!--Menu-->
-            <Border Grid.RowSpan="3" CornerRadius="25">
+            <Border CornerRadius="25">
                 <Border.Background>
                     <LinearGradientBrush>
                         <GradientStop Color="#fb7154" Offset="0"/>
@@ -70,35 +70,37 @@
                 </StackPanel>
             </Border>
 
-            <!--Search Section-->
-            <Border Grid.Column="1" Margin="875,0,7,20" Style="{StaticResource whiteBorder}" Grid.ColumnSpan="2">
-                <Grid>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                        <Border Width="30" Height="30" CornerRadius="10" Margin="-5 0 20 0">
-                            <Border.Background>
-                                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                                    <GradientStop Color="#fb7456" Offset="0"/>
-                                    <GradientStop Color="#fa5654" Offset="1"/>
-                                </LinearGradientBrush>
-                            </Border.Background>
+            <!--Hello Section-->
+            <Grid Grid.Column="2">
+                <Border Style="{StaticResource whiteBorder}">
+                    <Grid>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                            <Border Width="30" Height="30" CornerRadius="10" Margin="-5 0 20 0">
+                                <Border.Background>
+                                    <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                                        <GradientStop Color="#fb7456" Offset="0"/>
+                                        <GradientStop Color="#fa5654" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </Border.Background>
 
-                            <Image Margin="0,5,-2,-1"/>
-                        </Border>
+                                <Image Margin="0,5,-2,-1"/>
+                            </Border>
 
-                        <StackPanel VerticalAlignment="Center">
-                            <TextBlock Text="Hello, Team" FontSize="18" FontWeight="Bold" Style="{StaticResource titleText1}"/>
-                            <TextBlock Text="Have a good day!!!" Foreground="#6c879a" Margin="0 3 0 0"/>
+                            <StackPanel VerticalAlignment="Center">
+                                <TextBlock Text="Hello, Team" FontSize="18" FontWeight="Bold" Style="{StaticResource titleText1}"/>
+                                <TextBlock Text="Have a good day!!!" Foreground="#6c879a" Margin="0 3 0 0"/>
+                            </StackPanel>
                         </StackPanel>
-                    </StackPanel>
 
-                    <!--Search TextBox-->
-                    <Grid Width="176" HorizontalAlignment="Left" Margin="-14,0,0,0">
-                        <TextBlock Margin="15 0" VerticalAlignment="Center" Foreground="#868686" Panel.ZIndex="1"
-                                   Visibility="{Binding ElementName=textBoxSearch,
-                                                        Converter={StaticResource boolToVisConv}}"/>
+                        <!--Search TextBox-->
+                        <Grid Width="176" HorizontalAlignment="Left" Margin="-14,0,0,0">
+                            <TextBlock Margin="15 0" VerticalAlignment="Center" Foreground="#868686" Panel.ZIndex="1"
+                       Visibility="{Binding ElementName=textBoxSearch,
+                                            Converter={StaticResource boolToVisConv}}"/>
+                        </Grid>
                     </Grid>
-                </Grid>
-            </Border>
+                </Border>
+            </Grid>
 
             <!--Infor Card-->
             <Grid Grid.Column="1" Grid.Row="0" Margin="10 0">
@@ -123,8 +125,8 @@
             </Grid>
 
             <!--Main Chart Section-->
-            <Border Grid.Column="1" Grid.Row="1" Style="{StaticResource whiteBorder}" Margin="20,5,20,0" Grid.RowSpan="2">
-                <Grid Margin="1 5">
+            <Border Grid.Column="0" Grid.Row="1" Style="{StaticResource whiteBorder}" Margin="20,5,20,0" Grid.RowSpan="2" Grid.ColumnSpan="2">
+                <Grid Margin="1,-20,1,5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2.5*"/>
                         <ColumnDefinition Width="*"/>
@@ -134,7 +136,7 @@
                     </Grid.ColumnDefinitions>
 
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="1.5*"/>
+                        <RowDefinition Height="0.8*"/>
                         <RowDefinition Height="5*"/>
                     </Grid.RowDefinitions>
                     <!--Chart-->
@@ -142,7 +144,7 @@
                     <DockPanel LastChildFill="False" Grid.ColumnSpan="5"
                                Grid.Row="1" Margin="2,0,0,3">
                         <ScrollViewer VerticalScrollBarVisibility="Visible" 
-                                      HorizontalScrollBarVisibility="Visible" Width="739">
+                                      HorizontalScrollBarVisibility="Visible" Width="909">
                             <StackPanel Name ="StackPanelChart" Loaded="chart_Loaded"/>
                         </ScrollViewer>
                     </DockPanel>
@@ -175,24 +177,29 @@
             </Border>
 
             <!--Sales List-->
-            <Border Style="{StaticResource whiteBorder}" Margin="875,0,0,0" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2">
-                <StackPanel>
-                    <TextBlock Text="Top sales List" Style="{StaticResource titleText1}"/>
-                    <TextBlock Style="{StaticResource titleText2}" TextWrapping="Wrap" Margin="0 10"  
-                                   Text="This is the sales data top 10 with the most revenue for this month"/>
-                    <DataGrid Name="ProductGrid" AutoGenerateColumns="False" Grid.Row="1" Height="236" Width="167" Margin="0 20 0 0">
-                        <DataGrid.Columns>
-                            <DataGridTextColumn Header="Product" Binding="{Binding PhoneName}" Width="*" IsReadOnly="True"/>
-
-                            <DataGridTextColumn Header="Price" Binding="{Binding Price, Converter={StaticResource USDtoVNDConverter}}" Width="*" IsReadOnly="True"/>
-
-                            <DataGridTextColumn Header="Sold" Binding="{Binding quantity, UpdateSourceTrigger=PropertyChanged}" Width="*"/>
-                        </DataGrid.Columns>
-                    </DataGrid>
-
-                    <!--Infors-->
-                </StackPanel>
-            </Border>
+            <Grid Grid.Column="2" Grid.Row="1" Grid.RowSpan="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="363*"/>
+                    <RowDefinition Height="197*"/>
+                </Grid.RowDefinitions>
+                <Border Style="{StaticResource whiteBorder}" Grid.RowSpan="2">
+                    <StackPanel>
+                        <TextBlock Text="Top sales List" Style="{StaticResource titleText1}"/>
+                        <TextBlock Style="{StaticResource titleText2}" TextWrapping="Wrap" Margin="0 10"  
+                       Text="This is the sales data top 10 with the most revenue for this month"/>
+                        <WrapPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <ItemsControl Name="ProductPanel">
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding quantity, UpdateSourceTrigger=PropertyChanged}"/>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </WrapPanel>
+                        <!--Infors-->
+                    </StackPanel>
+                </Border>
+            </Grid>
         </Grid>
     </Border>
 </UserControl>
